--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,10 @@ header, main {
     text-align: center;
 }
 
+main {
+    position: relative;
+}
+
 main p {
     margin: 50px 0 25px 0;
 }
@@ -53,10 +57,11 @@ form {
     margin-top: 50px;
     background: yellow;
     position: absolute;
-    z-index: 100;
     display: none;
 }
 
 .display-form {
     display: block;
+    position: absolute;
+    z-index: 100;
 }
