--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,11 @@ button {
     box-shadow: 2px 2px 2px 2px var(--main-color);
 }
 
+.new-book {
+    margin: 25px 0 50px 0;
+    padding: 10px 20px;
+}
+
 button:hover {
     transform: rotate(20deg);
 }
@@ -54,11 +59,6 @@ main p {
     margin: 50px 0 25px 0;
     font-size: 32px;
     font-weight: 600;
-}
-
-.new-book {
-    margin-bottom: 50px;
-    padding: 10px 20px;
 }
 
 main table {
@@ -172,4 +172,8 @@ form p {
     visibility: visible;
     transform: scale(1);
     transition: transform .6s;
+}
+
+tfoot {
+    font-size: 24px;
 }
